--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack serve",
+    "start:server": "json-server --watch db.json --port 3004",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.3",
@@ -29,6 +31,7 @@
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
+    "json-server": "^0.17.0",
     "prettier": "2.5.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
