--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.1",
     "eslint": "^8.10.0",
@@ -32,8 +33,10 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
     "json-server": "^0.17.0",
+    "postcss": "^8.4.8",
     "prettier": "2.5.1",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.23",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
@@ -42,6 +45,7 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.3",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "6"
   }
 }
