--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-webpack-plugin": "^5.5.0",
     "json-server": "^0.17.0",
     "postcss": "^8.4.8",
+    "postcss-loader": "^6.2.1",
     "prettier": "2.5.1",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.23",
@@ -42,6 +43,10 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
+    "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.3",
