--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack serve",
-    "start:server": "json-server --watch db.json --port 3004",
+    "start:server": "json-server db.json -m ./node_modules/json-server-auth --port 3004",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -33,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
     "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
     "postcss": "^8.4.8",
     "postcss-loader": "^6.2.1",
     "prettier": "2.5.1",
@@ -45,6 +46,7 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
