--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "@heroicons/react": "^1.0.6",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.3",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "6"
   }
