--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build": "webpack",
     "start": "webpack serve",
     "start:server": "json-server db.json -m ./node_modules/json-server-auth --port 3004",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "eslint './**/*.{js,jsx}'",
+    "lint:fix": "eslint './**/*.{js,jsx}' --fix"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -55,6 +55,8 @@
     "react-addons-shallow-compare": "^15.6.3",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
-    "react-router-dom": "6"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "6",
+    "redux": "^4.1.2"
   }
 }
